<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:id="@+id/Right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Right" />

    <TextView
        android:id="@+id/Wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Wrong" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question1" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">



        <RadioButton
            android:id="@+id/Radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/True" />

        <RadioButton
            android:id="@+id/Radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/False" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <Button
        android:id="@+id/Enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enter" />

</LinearLayout>